--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../../public/" type="image/x-icon">
-    <link rel="stylesheet" href="../../public/styles/style.css">
-    <link rel="stylesheet" href="../../public/bootstrap/css/bootstrap.min.css">
+    <link rel="shortcut icon" href="./3dd.png" type="image/x-icon">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
     <title>DHF</title>
 </head>
 <body>
@@ -83,8 +83,8 @@
         </div>
     </section>
 </body> 
-<script src="../../public/bootstrap/js/bootstrap.bundle.min.js"></script>
-<script src="../../public/bootstrap/js/bootstrap.min.js"></script>
+<script src="./bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="./bootstrap/js/bootstrap.min.js"></script>
 
 
 
